# demogl

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.backup  README.md  curve.cpp  cvdemo.cpp  demo  demo.frag  demo.vert  demogl.cpp  demogl.h  gl.cpp  main.cpp  sdlgl.cpp  sdlglimgui.cpp  sdlglimguitextured.cpp  split.cpp
assets/: basic_colored.vert  basic_textured.frag  basic_textured.vert  cube.dae  curve.frag  curve.vert  demo.frag  demo.vert  integral.vert  monkey.dae  notcube.dae  origin.frag  origin.vert  rawcube.h  solid_color.vert
glad/: glad.c  glad.h
model/: blank.cpp  blank.h  cube.cpp  cube.h  model.cpp  model.h  window.cpp  window.h
origin/: origin.cpp  origin.h
renderable/: gldata.cpp  gldata.h  renderable.cpp  renderable.h
scene/: collada.cpp  collada.h  imfilebrowser.h  loader.cpp  loader.h  scene.cpp  scene.h
